Version 0.4.14 (2021-12-19)
-------------
- 提高对Numbers转xlsx的兼容性
- 值转换从原来的int类型扩大为Object
- 增加@RowNum注解，用于注入行号
- 修改ListSheet.EntryColumn的访问权限，方便实现更多高级特性
- 支持单列数字无表头导出，现在可以简单的导出`List<String>`数据
- 修复已知BUG(#197,#202，#205,#219)
- 将com.google.common包重命名为org.ttzero.excel.common解决内嵌引起的包冲突(#200)

Version 0.4.13 (2021-08-09)
-------------
- 支持xls获取图片
- `@ExcelColumn`注解增加`colIndex`属性，用于指定列顺序(#188)
- 读取文件时`Worksheet#getIndex()`返回Sheet在文件中的下标而非id，并取消按id排序(#193)
- 修复部分BUG(#182,#190)

Version 0.4.12.1 (2021-05-20)
-------------
- Hotfix：HeaderStyle注解设置某列cell颜色会影响所有表头样式

Version 0.4.12 (2021-05-18)
-------------
- 增加获取图片功能(#168)
- 支持row()方法转对象(#175)
- 读取文件默认使用包装类而非基本类型，为了方便处理Null类型(#177)
- 增加`@HeaderStyle`注解自定义头部样式，本次仅引入颜色的定制，后续将提供更丰富的样式支持

Version 0.4.11 (2021-03-28)
-------------
- 修复导出时删除特殊字符的问题
- 增加wrapText属性控制单元格自动换行
- 增加forceExport属性来强制没有@ExcelColumn注解的属性

Version 0.4.11 (2021-01-15) *eec-e3-support* only
-------------
1. 兼容非标准化BOF记录解析
2. 优化short-sector解析
3. 极大提升读取xls兼容性(兼容某些版本所有数据都写在short-sector中的处理；提升大文件CONTINUE块解析的容错性；提升某些版本没有short-sector的容错性)
4. 增加对EXTSST的解析

Version 0.4.10 (2021-01-07)
-------------
1. 增加兼容性（Office for Mac）
2. 修复部分BUG(#147,#148,#159,#161)

Version 0.4.9 (2020-11-15)
-------------
1. 修复读取文件时的BUG(#146)
2. 增加读取高版本Office导出的xls文件格式的兼容性

Version 0.4.8 (2020-10-09)
-------------
1. ExcelColumn注解增加format属性来支持自定义单元格格式化
2. 为减少数据泄露风险，现在对象属性必须明确指定ExcelColumn注解才会被导出

Version 0.4.7 (2020-08-14)
-------------
1. 安全更新，修复dom4j小于2.1.3版本可能启用XXE攻击。
2. ExcelColumn注解增加comment属性，允许在Excel列头添加“批注”功能
3. 修复一些已知BUG

Version 0.4.6 (2020-04-20)
-------------
1. 什么也没做，0.4.4版本发布异常

Version 0.4.4 (2020-04-20)
-------------
1. 优化SharedStringTable
2. 支持读取Excel97~2003文件(需要依懒eec-e3-support)
3. 修复一些已知BUG

Version 0.4.3 (2020-03-19)
-------------
1. 修复读取科学计数转数字类型时抛NumberFormatException异常
2. 修复读取SharedString单字符串时内容错乱的BUG
3. 解决读取java.sql.Time和java.time.LocalTime类型时导致UncheckedTypeException异常
4. 解决打开EEC导出的空Worksheet时会弹出警告信息
5. 缩小堆内存使用（最小6MB）

Version 0.4.2 (2020-03-04)
-------------