@@ -1,3 +1,8 @@
+Version  ()
+-------------
+- 增加StyleDesign用于样式处理（单元格或者整行样式处理）
+- 修改部分BUG(#227,#238)
+
 Version 0.4.14 (2021-12-19)
 -------------
 - 提高对Numbers转xlsx的兼容性
